[project]
name = "bluesky-sms-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.65",
    "authlib>=1.3",
    "chump>=1.6.0",
    "dnspython>=2.6",
    "flask>=3.1.3",
    "google-cloud-firestore>=2.23.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "regex>=2024.11.6",
    "requests>=2.32.5",
    "requests-hardened>=1.0.0b3",
]
